Fix vertical alignment of Orderer contents
Summary:
Previously, the Orderer was relying on a line-height equal to the height of the card in order to
achieve a vertically centered layout. However, as the Renderer contents within the card were
setting their own line height, this wasn't getting inherited properly, and thus the contents were
not centering.

Test Plan:
- Open up the Orderer ([link](http://localhost:9000/#content=%7B%22question%22%3A%7B%22content%22%3A%22%5B%5B%E2%98%83%20orderer%201%5D%5D%5Cn%22%2C%22images%22%3A%7B%7D%2C%22widgets%22%3A%7B%22orderer%201%22%3A%7B%22type%22%3A%22orderer%22%2C%22alignment%22%3A%22default%22%2C%22static%22%3Afalse%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22options%22%3A%5B%7B%22content%22%3A%22a%22%7D%2C%7B%22content%22%3A%22b%22%7D%5D%2C%22correctOptions%22%3A%5B%7B%22content%22%3A%22a%22%7D%5D%2C%22otherOptions%22%3A%5B%7B%22content%22%3A%22b%22%7D%5D%2C%22height%22%3A%22normal%22%2C%22layout%22%3A%22horizontal%22%7D%2C%22version%22%3A%7B%22major%22%3A0%2C%22minor%22%3A0%7D%7D%7D%7D%2C%22answerArea%22%3A%7B%22calculator%22%3Afalse%2C%22chi2Table%22%3Afalse%2C%22periodicTable%22%3Afalse%2C%22tTable%22%3Afalse%2C%22zTable%22%3Afalse%7D%2C%22itemDataVersion%22%3A%7B%22major%22%3A0%2C%22minor%22%3A1%7D%2C%22hints%22%3A%5B%5D%7D)).
    - Verify that the contents are centered vertically (both with and without `xomMantee: true` in local storage).

Before: {F542486}

After: {F542487}

Reviewers: emily, david

Reviewed By: emily, david

Subscribers: jared

Differential Revision: https://phabricator.khanacademy.org/D27804

--- a/stylesheets/exercise-content-package/widgets/orderer.less
+++ b/stylesheets/exercise-content-package/widgets/orderer.less
@@ -19,24 +19,17 @@
         user-select: none;
         width: auto;
 
-        img {
-            vertical-align: middle;
-        }
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     &.height-normal.layout-horizontal .card {
-        line-height: 65px;
         height: 65px;
     }
 
     &.height-normal.layout-vertical .card {
         padding: 5px;
-    }
-
-    &.height-large .card {
-        // TODO(alex): remove after checking that no items use this option
-        line-height: 160px;
-        height: 160px;
     }
 
     &.height-auto .card {
